--- a/post_love.html
+++ b/post_love.html
@@ -62,6 +62,8 @@
                         <p>Постоянно Матвея можно было увидеть за какой-нибудь девушкой. И они всегда были прекрасны! А если что-то шло не так, он быстро пересматривал свои взгляды и тихонечко уходил от неё</p>
                         <h2 class="section-heading">Большой случай</h2> 
                         <p>Однажды он смог заполучить взрослую девушку, она прекрасная актриса и никому не давалась. Но Матвей смог за несколько дней получить ключ к ее сердцу и забрать к себе в руки! Как он это сделал, сложно сказать, но он смог.</p>
+                        <img class="img-fluid" src="assets/img/love10.jpg" alt="..." />
+                        <span class="caption text-muted">Матвей с Зоей!</span>
                         <h2 class="section-heading">Мигай, мигай, Мигалочка!</h2> 
                         <p>Был ещё один случай. Матвей смог получить Мигалочку. А что значит "Мигалочка"? Ну конечно же девушка с цветными волосами. Он помог ей избавиться от плохих привычек, которыми она портила свою жизнь и вообще могла погибнуть. А после он увидел в ней зло и быстро закончил этот роман.</p>
                         <img class="img-fluid" src="assets/img/love1.jpg" alt="..." />
