--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <h1>Матвей - простой и хороший человек!</h1>
                         <p>Что вообще значит имя Матвей? Это точно добрый, отзывчивый, приятный, дружелюбный, надеждный и просто классный человек!</p>
-                        <h1>Давайте немного пройдемся по астрологии Матвея!</h1>
+                        <h1>Давайте немного пройдемся по астрологии имени Матвей!</h1>
                         <p></p>
                         <ul><li>Знак Зодиака: Скорпион</li>
                             <li>Планета-покровитель: Плутон</li>
