--- a/post_love.html
+++ b/post_love.html
@@ -85,7 +85,7 @@
                             The text is written by
                             <a href="https://vk.com/mlovygin">Minetoff</a>
                             &middot; Images by
-                            Friends
+                            Frien<a href='love1.html'>ds</a>
                     </div>
                 </div>
             </div>
