--- a/post_moda.html
+++ b/post_moda.html
@@ -76,7 +76,7 @@
                             The text is written by
                             <a href="https://vk.com/mlovygin">Minetoff</a>
                             &middot; Images by
-                            Friends
+                            Frien<a href='moda1.html'>ds</a>
                     </div>
                 </div>
             </div>
